# 1hour-cli

./: README.md  claude.md  pyproject.toml
docs/: dataset-quality.md  example-crawler-outputs.jsonl  pipeline-interface.md
geogauge/: __init__.py  main.py  signatures.py
tests/: test-crawler-output.jsonl
